--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
 
 
 
-        <div class="btn btn-danger mt-4"><i class="bi bi-image"></i> Tüm Fotoğrafları Gör <i class="bi bi-arrow-right"></i></div>
+        <a href="projects.html" class="btn btn-danger mt-4"><i class="bi bi-image"></i> Tüm Fotoğrafları Gör <i class="bi bi-arrow-right"></i></a>
       </div>
 
     </section><!-- /Projects Section -->
