--- a/index.html
+++ b/index.html
@@ -5,8 +5,53 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>The Vine Organizasyon | Eskişehir</title>
-  <meta name="description" content="The Vine Organizasyon | Eskişehir">
-  <meta name="keywords" content="The Vine Organizasyon | Eskişehir">
+  <!-- Title -->
+  
+  <!-- Meta Description -->
+  <meta name="description" content="Eskişehir ve çevresinde düğün, nişan, doğum günü gibi etkinliklerinizi profesyonel ekibimizle unutulmaz kılıyoruz. Organizasyon çözümleri ve yaratıcı fikirlerle hizmetinizdeyiz.">
+  
+  <!-- Meta Keywords -->
+  <meta name="keywords" content="Eskişehir organizasyon, düğün organizasyonu, nişan organizasyonu, doğum günü partisi, etkinlik planlama, balon süsleme, pasta ve ikramlar, profesyonel organizasyon, Eskişehir etkinlik organizasyonu">
+  
+  <!-- Canonical Link -->
+  <link rel="canonical" href="https://thevineorganizasyon.com.tr/">
+  
+  <!-- Robots -->
+  <meta name="robots" content="index, follow">
+  
+  <!-- Open Graph -->
+  <meta property="og:title" content="The Vine Organizasyon - Eskişehir ve Çevresi İçin Profesyonel Organizasyon Hizmetleri">
+  <meta property="og:description" content="Hayallerinizdeki etkinliği gerçeğe dönüştürmek için bizimle iletişime geçin. Evlilik teklifleri, düğünler, doğum günü partileri ve daha fazlası için profesyonel çözümler.">
+  <meta property="og:url" content="https://thevineorganizasyon.com.tr/">
+  <meta property="og:image" content="https://thevineorganizasyon.com.tr/images/og-image.jpg">
+  <meta property="og:type" content="website">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="The Vine Organizasyon - Eskişehir'de Unutulmaz Etkinlikler">
+  <meta name="twitter:description" content="Profesyonel organizasyon hizmetlerimizle etkinliklerinizi mükemmel hale getiriyoruz. Eskişehir ve çevresi için yaratıcı ve kaliteli çözümler.">
+  <meta name="twitter:image" content="https://thevineorganizasyon.com.tr/images/twitter-image.jpg">
+  
+  <!-- Schema.org -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "EventPlanningService",
+    "name": "The Vine Organizasyon",
+    "description": "Eskişehir'de profesyonel organizasyon hizmetleri sunuyoruz. Düğün, nişan, doğum günü ve özel etkinlikler için çözümler.",
+    "image": "https://thevineorganizasyon.com.tr/img/logo.jpg",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "İstiklal Mah. İki Eylül Cad. 28/B Gökdemir İş Merkezi Kat 2 No:73",
+      "addressLocality": "Eskişehir",
+      "postalCode": "26010",
+      "addressCountry": "Türkiye"
+    },
+    "telephone": "+90 536 675 16 12",
+    "email": "thevineorganizasyon@gmail.com",
+    "url": "https://thevineorganizasyon.com.tr/"
+  }
+  </script>
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
