--- a/index.html
+++ b/index.html
@@ -1,155 +1,61 @@
-<!DOCTYPE html>
-<html lang="en">
 
+<!doctype html>
+<html lang="tr">
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>The Vine Organizasyon | Eskişehir</title>
-  <!-- Title -->
-  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
-  <!-- Meta Description -->
-  <meta name="description" content="Eskişehir ve çevresinde düğün, nişan, doğum günü gibi etkinliklerinizi profesyonel ekibimizle unutulmaz kılıyoruz. Organizasyon çözümleri ve yaratıcı fikirlerle hizmetinizdeyiz.">
-  
-  <!-- Meta Keywords -->
-  <meta name="keywords" content="Eskişehir organizasyon, düğün organizasyonu, nişan organizasyonu, doğum günü partisi, etkinlik planlama, balon süsleme, pasta ve ikramlar, profesyonel organizasyon, Eskişehir etkinlik organizasyonu">
-  
-  <!-- Canonical Link -->
-  <link rel="canonical" href="https://thevineorganizasyon.com.tr/">
-  
-  <!-- Robots -->
-  <meta name="robots" content="index, follow">
-  
-  <!-- Open Graph -->
-  <meta property="og:title" content="The Vine Organizasyon - Eskişehir ve Çevresi İçin Profesyonel Organizasyon Hizmetleri">
-  <meta property="og:description" content="Hayallerinizdeki etkinliği gerçeğe dönüştürmek için bizimle iletişime geçin. Evlilik teklifleri, düğünler, doğum günü partileri ve daha fazlası için profesyonel çözümler.">
-  <meta property="og:url" content="https://thevineorganizasyon.com.tr/">
-  
-  <meta property="og:type" content="website">
-  
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="The Vine Organizasyon - Eskişehir'de Unutulmaz Etkinlikler">
-  <meta name="twitter:description" content="Profesyonel organizasyon hizmetlerimizle etkinliklerinizi mükemmel hale getiriyoruz. Eskişehir ve çevresi için yaratıcı ve kaliteli çözümler.">
-
-  
-  <!-- Schema.org -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "EventPlanningService",
-    "name": "The Vine Organizasyon",
-    "description": "Eskişehir'de profesyonel organizasyon hizmetleri sunuyoruz. Düğün, nişan, doğum günü ve özel etkinlikler için çözümler.",
-   
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "İstiklal Mah. İki Eylül Cad. 28/B Gökdemir İş Merkezi Kat 2 No:73",
-      "addressLocality": "Eskişehir",
-      "postalCode": "26010",
-      "addressCountry": "Türkiye"
-    },
-    "telephone": "+90 536 675 16 12",
-    "email": "thevineorganizasyon@gmail.com",
-    "url": "https://thevineorganizasyon.com.tr/"
-  }
-  </script>
-
-
-
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
-
-  <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
-
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Bağlantınız gizli değil</title>
+  <style>
+    :root{
+      --bg:#ffffff;
+      --fg:#202124; /* Chrome default-ish */
+      --muted:#5f6368;
+      --border:#e0e0e0;
+      --btn:#1a73e8;
+      --btn-fg:#fff;
+      --danger:#d93025;
+      --surface:#fafafa;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0; font:16px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+      color:var(--fg); background:var(--bg);
+    }
+    .wrap{max-width:760px; margin:7vh auto; padding:24px;}
+    .card{background:var(--surface); border:1px solid var(--border); border-radius:12px; padding:28px;}
+    .icon{width:40px; height:40px; margin-right:12px; flex:0 0 auto}
+    .row{display:flex; align-items:center}
+    h1{font-size:28px; margin:0 0 8px 0; font-weight:600}
+    p{margin:0 0 12px 0}
+    .muted{color:var(--muted)}
+    .url{font-family:ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; padding:2px 6px; border:1px solid var(--border); border-radius:8px; display:inline-block; background:#fff}
+    .actions{display:flex; gap:12px; margin-top:18px; flex-wrap:wrap}
+    .btn{appearance:none; border:1px solid var(--border); background:#fff; color:var(--fg); padding:10px 14px; border-radius:8px; cursor:pointer}
+    .btn.primary{background:var(--btn); border-color:transparent; color:var(--btn-fg)}
+    .btn.ghost{background:transparent}
+    .btn.danger{color:#fff; background:var(--danger); border-color:transparent}
+    details{margin-top:18px}
+    summary{cursor:pointer; user-select:none}
+    .code{background:#fff; border:1px solid var(--border); border-radius:8px; padding:12px; overflow:auto; font-family:ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace}
+    .err{color:var(--danger); font-weight:600}
+    .footer{margin-top:28px; color:var(--muted); font-size:14px}
+    .divider{height:1px; background:var(--border); margin:16px 0}
+    @media (max-width:560px){
+      .wrap{margin:4vh auto; padding:16px}
+      .card{padding:18px}
+      h1{font-size:22px}
+    }
+  </style>
 </head>
-
-<body class="index-page">
-<div class="js-container containeran"></div>
-  <script>
-    const Confettiful = function (el) {
-        this.el = el;
-        this.containerEl = null;
-
-        this.confettiFrequency = 3;
-        this.confettiColors = ['#fce18a', '#ff726d', '#b48def', '#f4306d'];
-        this.confettiAnimations = ['slow', 'medium', 'fast'];
-
-        this._setupElements();
-        this._renderConfetti();
-      };
-
-      Confettiful.prototype._setupElements = function () {
-        const containerEl = document.createElement('div');
-        const elPosition = this.el.style.position;
-
-        if (elPosition !== 'relative' || elPosition !== 'absolute') {
-          this.el.style.position = 'relative';
-        }
-
-        containerEl.classList.add('confetti-container');
-
-        this.el.appendChild(containerEl);
-
-        this.containerEl = containerEl;
-      };
-
-      Confettiful.prototype._renderConfetti = function () {
-        this.confettiInterval = setInterval(() => {
-          const confettiEl = document.createElement('div');
-          const confettiSize = Math.floor(Math.random() * 3) + 7 + 'px';
-          const confettiBackground = this.confettiColors[Math.floor(Math.random() * this.confettiColors.length)];
-          const confettiLeft = Math.floor(Math.random() * this.el.offsetWidth) + 'px';
-          const confettiAnimation = this.confettiAnimations[Math.floor(Math.random() * this.confettiAnimations.length)];
-
-          confettiEl.classList.add('confetti', 'confetti--animation-' + confettiAnimation);
-          confettiEl.style.left = confettiLeft;
-          confettiEl.style.width = confettiSize;
-          confettiEl.style.height = confettiSize;
-          confettiEl.style.backgroundColor = confettiBackground;
-
-          confettiEl.removeTimeout = setTimeout(function () {
-            confettiEl.parentNode.removeChild(confettiEl);
-          }, 3000);
-
-          this.containerEl.appendChild(confettiEl);
-        }, 25);
-      };
-
-      window.confettiful = new Confettiful(document.querySelector('.js-container'));
-  </script>
+<body>
   <div class="wrap">
     <div class="row" style="margin-bottom:18px">
       <!-- Lock Icon (outline) -->
       <svg class="icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-        <path d="M17 9V7a5 5 0 10-10 0v2" stroke="#5f6368" stroke-width="1.5" stroke-linecap="round"></path>
-        <rect x="4" y="9" width="16" height="11" rx="2.5" stroke="#5f6368" stroke-width="1.5"></rect>
-        <circle cx="12" cy="14.5" r="1.5" fill="#5f6368"></circle>
+        <path d="M17 9V7a5 5 0 10-10 0v2" stroke="#5f6368" stroke-width="1.5" stroke-linecap="round"/>
+        <rect x="4" y="9" width="16" height="11" rx="2.5" stroke="#5f6368" stroke-width="1.5"/>
+        <circle cx="12" cy="14.5" r="1.5" fill="#5f6368"/>
       </svg>
       <div>
         <h1>Bağlantınız gizli değil</h1>
@@ -166,12 +72,12 @@
         <button class="btn primary" onclick="location.reload()">Yeniden dene</button>
       </div>
 
-      <details open="">
+      <details>
         <summary>Gelişmiş</summary>
         <div class="divider"></div>
         <p class="muted">thevineorganizasyon.com.tr adresine saldırganlar tarafından yönlendiriliyor olabilirsiniz veya ağınız bu siteyi taklit ediyor olabilir. Bilgileriniz (ör. parolalar, mesajlar veya kredi kartı bilgileriniz) risk altında olabilir.</p>
-        <p style="margin-top:12px" class="code">Kodu: <span class="err">NET::ERR_CERT_AUTHORITY_INVALID</span><br>
-        Tarih/Zaman: <script>document.write(new Date().toLocaleString('tr-TR'))</script>28.11.2025 22:55:22<br>
+        <p style="margin-top:12px" class="code">Kodu: <span class="err">NET::ERR_CERT_AUTHORITY_INVALID</span><br/>
+        Tarih/Zaman: <script>document.write(new Date().toLocaleString('tr-TR'))</script><br/>
         İstemci: GitHub
         </p>
       </details>
@@ -179,50 +85,5 @@
       
     </div>
   </div>
-
-<footer style="margin-bottom: 50px;" id="footer" class="footer">
-
-
-
-  <div class="container copyright text-center mt-4">
-    <p>© <span>Copyright</span> <strong class="px-1 sitename">thevineorganizasyon.com.tr</strong> <span>Tüm Hakları Saklıdır</span></p>
-    
-  </div>
-
-</footer>
-
-
-  <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
- 
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-
-  <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
-
-
-  <!-- Swiper JS -->
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  
-  <!-- Initialize Swiper -->
-  <script>
-    var swiper = new Swiper(".mySwiper", {
-      pagination: {
-        el: ".swiper-pagination",
-        type: "fraction",
-      },
-      navigation: {
-        nextEl: ".swiper-button-next",
-        prevEl: ".swiper-button-prev",
-      },
-    });
-  </script>
 </body>
-
 </html>
